--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,20 +7,55 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(117, 117, 117, 0.4);
 }
 
 .modal-content {
-  background-color: #fefefe;
-  margin: 10% auto;
+  background-color: hsl(0, 2%, 22%);
+  margin: 200px auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
 }
 
 .close {
-  color: #aaa;
+  color: #ff0000;
   float: right;
-  font-size: 28px;
+  font-size: 50px;
   font-weight: bold;
+}
+
+h2 {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 9px;
+}
+
+tr {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+label {
+  font-weight: bold;
+  color: white;
+}
+
+input {
+  margin: 5px;
+  padding: 25px;
+  border-radius: 5px;
+  border: 1px solid black;
+  width: 850px;
+}
+
+.delete:hover {
+  background-color: red;
+  color: white;
+}
+
+.create:hover, .submit:hover, .update:hover {
+  background-color: green;
+  color: white;
 }
